fix: always show scrollbar

--- a/packages/grid/src/grid.css
+++ b/packages/grid/src/grid.css
@@ -129,7 +129,7 @@ input {
     right: 0;
     bottom: 0;
     overflow-y: scroll;
-    overflow-x: none;
+    overflow-x: scroll;
 }
 
 .simple-html-grid-middle-scroller-body {
